Archive2/0b/9c8b5a31b5ff22/output
main.cpp: In function 'constexpr const char* foo(double)':
main.cpp:14:1: error: body of constexpr function 'constexpr const char* foo(double)' not a return-statement
 }
 ^
